# FPGA_RectArray_FOSSN

./: readme.md
design/amaranth_top/amaranth_top/: top.py  top_fpga.md  top_fpga.py
design/application/: pyproject.toml
design/application/application/: config.py  hw.py  record.py  recorder.py  server.py
nix/design/application/: default.nix
nix/nixos/sd-image/: default.nix  start_recorder.nix  start_server.nix
